--- a/style.css
+++ b/style.css
@@ -7,12 +7,26 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* HEADER & NAV */
+/* HEADER */
 header {
+    display: flex;
+    align-items: center;
+    padding: 15px 30px;
     background: #000;
     border-bottom: 2px solid #ff2b2b;
-    padding: 15px 30px;
 }
+
+header .logo img {
+    height: 50px;
+    margin-right: 15px;
+}
+
+header .logo h2 {
+    color: #ff2b2b;
+    font-size: 24px;
+    margin: 0;
+}
+
 
 nav {
     background: #000;
